[feat]: add section CTA

--- a/src/app/components/hero/index.component.html
+++ b/src/app/components/hero/index.component.html
@@ -1,23 +1,24 @@
-<section class="hero-section">
+<section class="hero-section container">
   <div class="tagline">
     <h1 class="title">
-      Challenge your knowledge Let's try the <span class="purple">Quizz</span> and
-      sharpen your <span class="yellow">brain</span>
+      Challenge your knowledge Let's try the <span class="font-cursive purple">Quizz</span> and
+      sharpen your <span class="font-cursive yellow">brain</span>
     </h1>
     <p class="subtitle">
       Discover thousands of fun and interactive quizz to hone your knowledge and support your growth
     </p>
     <div class="cta">
-      <button mat-flat-button class="btn-cta">
+      <button mat-flat-button class="btn-cta" matTooltip="Let's try Quizz">
         Get started
         <mat-icon fontIcon="arrow_outward"/>
       </button>
     </div>
   </div>
   <div class="img-top-left">
-    <img ngSrc="/images/1.png" alt="kid happiness" fill>
+    <img ngSrc="/images/1.png" alt="kid happiness" fill priority>
   </div>
   <div class="img-bottom-right">
     <img ngSrc="/images/2.png" alt="woman bring a book" fill>
   </div>
+  <span class="icon-grid"></span>
 </section>
