--- a/src/app/components/navbar/index.component.html
+++ b/src/app/components/navbar/index.component.html
@@ -1,5 +1,5 @@
 <header>
-  <nav>
+  <nav class="container">
     <a href="#" class="nav-brand">Quizz</a>
     <ul [class]="{ 'nav-menu': true, show: isDrawerOpen }">
       <li><a href="#" class="nav-link active">Home</a></li>
@@ -8,7 +8,7 @@
       <li><a href="#" class="nav-link">Contact Us</a></li>
       <button class="btn-signin" mat-stroked-button>Sign In</button>
     </ul>
-    <button class="btn-signin" mat-stroked-button>Sign In</button>
+    <button class="btn-signin" mat-stroked-button matTooltip="Sign In to Quizz">Sign In</button>
     <button class="btn-action" (click)="onOpenDrawerHandler()">
       <mat-icon aria-label="navigation-action" fontIcon="menu"></mat-icon>
     </button>
