[feat]: add testimonial section

--- a/src/app/components/navbar/index.component.html
+++ b/src/app/components/navbar/index.component.html
@@ -1,7 +1,7 @@
 <header>
   <nav class="container">
     <a href="#" class="nav-brand">Quizz</a>
-    <ul [class]="{ 'nav-menu': true, show: isDrawerOpen }">
+    <ul [class]="{ 'nav-menu': true, 'show': isDrawerOpen }">
       <li><a href="#" class="nav-link active">Home</a></li>
       <li><a href="#" class="nav-link">Features</a></li>
       <li><a href="#" class="nav-link">About Us</a></li>
