--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,6 +8,7 @@ $white: #ffffff;
 $gray-white: #f7f7f7;
 $gray: #aaa;
 $yellow: #f9b822;
+$black: #111111;
 
 // Breakpoints
 $max-width-tablet: 769px;
