[feat]: add contact us section

--- a/src/app/components/testimonial/index.component.html
+++ b/src/app/components/testimonial/index.component.html
@@ -11,7 +11,7 @@
         <mat-card class="card" appearance="outlined">
            <div class="left">
                 <div class="img">
-                    <img [ngSrc]="'/images/potrait/' + testimoni().photo" alt="scholl girl smile" fill priority>
+                    <img [ngSrc]="'/images/potrait/' + testimoni().photo" [alt]="testimoni().name" fill priority>
                 </div>
            </div>
            <div class="right">
