[feat]: add contact section, subscribe, and footer

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,5 +5,8 @@
     <cta-app/>
     <testimonial-app/>
     <contact-us-app/>
+    <subscribe-app/>
+    <footer-app/>
+    <scroll-to-top-app/>
     <router-outlet/>
 </main>
