--- a/src/app/components/cta/index.component.scss
+++ b/src/app/components/cta/index.component.scss
@@ -41,7 +41,7 @@
             .left {
                 width: 60%;
                 .description {
-                   width: 400px; 
+                   max-width: 400px; 
                 }
             }
     
