[style]: fix style on navbar component

--- a/src/app/components/navbar/index.component.html
+++ b/src/app/components/navbar/index.component.html
@@ -1,4 +1,4 @@
-<header>
+<header [class]="{'shadow': isShowShadow}">
   <nav class="container">
     <a href="#" class="nav-brand">Quizz</a>
     <ul [class]="{ 'nav-menu': true, 'show': isDrawerOpen }">
