[feat]: add dynamic page for home page, feature page, about us page, and contact us page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,3 @@
 <main>
-    <navbar-app/>
-    <hero-app/>
-    <feature-app/>
-    <cta-app/>
-    <testimonial-app/>
-    <contact-us-app/>
-    <subscribe-app/>
-    <footer-app/>
-    <scroll-to-top-app/>
-    <router-outlet/>
+    <frontend-layout-app />
 </main>
