--- a/src/app/components/cta/index.component.html
+++ b/src/app/components/cta/index.component.html
@@ -10,7 +10,7 @@
         now and start exploring thousands of interesting questions that not only
         sharpen your brain, but also fun!
       </p>
-      <button mat-stroked-button matTooltip="Play Quizz Now">
+      <button class="btn" mat-stroked-button matTooltip="Play Quizz Now">
         Play Now
         <mat-icon fontIcon="arrow_outward"/>
       </button>
