--- a/src/app/components/cta/index.component.scss
+++ b/src/app/components/cta/index.component.scss
@@ -3,6 +3,7 @@
 .cta-section {
     margin-top: 80px;
     padding-bottom: 50px;
+    margin-bottom: 80px;
 
     .wrapper {
         display: flex;
