[feat]: add login page and wave svg for testimonial section also footer

--- a/src/app/shared/frontend/layout/index.component.html
+++ b/src/app/shared/frontend/layout/index.component.html
@@ -1,4 +1,8 @@
-<navbar-app/>
+@if (!isAuthPage) {
+    <navbar-app/>
+}
 <router-outlet/>
-<scroll-to-top-app/>
-<footer-app/>
+@if (!isAuthPage) {
+    <scroll-to-top-app/>
+    <footer-app/>
+}
