--- a/src/app/components/contactUs/index.component.scss
+++ b/src/app/components/contactUs/index.component.scss
@@ -1,9 +1,11 @@
 @use "../../../styles.scss" as *;
 
 .contact-us-section {
+  position: relative;
   padding-top: 60px;
   padding-bottom: 60px;
   margin-bottom: 60px;
+  z-index: 1;
 
   .wrapper {
     display: flex;
@@ -22,6 +24,8 @@
         height: 500px;
         overflow: hidden;
         border-radius: 1.3rem;
+        border: 1px solid $gray;
+        box-shadow: 2px 3px 10px rgba($black, .2);
       }
     }
 
