--- a/src/app/components/feature/index.component.html
+++ b/src/app/components/feature/index.component.html
@@ -18,8 +18,8 @@
         ></mat-icon>
       </mat-card-header>
       <mat-card-content>
-        <mat-card-title class="font-cursive">
-          <h3>{{ feature.title }}</h3>
+        <mat-card-title>
+          <h3 class="font-cursive">{{ feature.title }}</h3>
         </mat-card-title>
         <p class="description">
           {{ feature.description }}
