--- a/src/app/components/footer/index.component.html
+++ b/src/app/components/footer/index.component.html
@@ -1,4 +1,13 @@
 <footer class="footer">
+  <div class="footer__wave-top">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+      <path
+        fill="#8b5dff"
+        fill-opacity="1"
+        d="M0,192L30,202.7C60,213,120,235,180,234.7C240,235,300,213,360,197.3C420,181,480,171,540,186.7C600,203,660,245,720,256C780,267,840,245,900,224C960,203,1020,181,1080,192C1140,203,1200,245,1260,245.3C1320,245,1380,203,1410,181.3L1440,160L1440,320L1410,320C1380,320,1320,320,1260,320C1200,320,1140,320,1080,320C1020,320,960,320,900,320C840,320,780,320,720,320C660,320,600,320,540,320C480,320,420,320,360,320C300,320,240,320,180,320C120,320,60,320,30,320L0,320Z"
+      ></path>
+    </svg>
+  </div>
   <div class="container">
     <div class="footer-content">
       <div class="part">
@@ -20,10 +29,10 @@
       <div class="part">
         <h3 class="footer-link">Links</h3>
         <ul class="menu">
-          <li><a href="#" class="menu-link">Home</a></li>
-          <li><a href="#" class="menu-link">Features</a></li>
-          <li><a href="#" class="menu-link">About Us</a></li>
-          <li><a href="#" class="menu-link">Contact Us</a></li>
+          <li><a [routerLink]="['/']" class="menu-link">Home</a></li>
+          <li><a [routerLink]="['/feature']" class="menu-link">Features</a></li>
+          <li><a [routerLink]="['/about-us']" class="menu-link">About Us</a></li>
+          <li><a [routerLink]="['/contact-us']" class="menu-link">Contact Us</a></li>
         </ul>
       </div>
       <div class="part">
