--- a/src/app/components/footer/index.component.scss
+++ b/src/app/components/footer/index.component.scss
@@ -1,10 +1,18 @@
 @use "../../../styles.scss" as *;
 
 .footer {
+  position: relative;
   margin-top: -50px;
   background: $dark-purple;
   padding-top: 100px;
   padding-bottom: 45px;
+
+  &__wave-top {
+    position: absolute;
+    top: -47%;
+    width: 100%;
+    left: 0;
+  }
 
   .footer-content {
     color: $gray-white;
@@ -130,40 +138,55 @@
   }
 }
 
+@media screen and (min-width: 1025px) {
+  .footer {
+    &__wave-top {
+      top: -56%;
+    }
+  }
+}
 
 @media screen and (max-width: $max-width-tablet) {
-    .footer {
-        .footer-content {
-            gap: 30px;
+  .footer {
 
-            .part:nth-child(3) {
-                .title {
-                    line-height: 5rem;
-                }
-            }
-        }
+    &__wave-top {
+      top: -36%;
     }
+
+    .footer-content {
+      gap: 30px;
+
+      .part:nth-child(3) {
+        .title {
+          line-height: 5rem;
+        }
+      }
+    }
+  }
 }
 
 @media screen and (max-width: $max-width-mobile) {
-    .footer {
-        padding-top: 90px;
-
-        .footer-content {
-            grid-template-columns: repeat(1, 1fr);
-            gap: 40px;
-
-            .part:nth-child(3) {
-                .title {
-                    line-height: 4rem;
-                }
-            }
-        }
-
-        .footer-footer {
-            margin-top: 30px;
-            flex-direction: column-reverse;
-            gap: 20px;
-        }
+  .footer {
+    padding-top: 90px;
+    &__wave-top {
+      top: -10%;
     }
+
+    .footer-content {
+      grid-template-columns: repeat(1, 1fr);
+      gap: 40px;
+
+      .part:nth-child(3) {
+        .title {
+          line-height: 4rem;
+        }
+      }
+    }
+
+    .footer-footer {
+      margin-top: 30px;
+      flex-direction: column-reverse;
+      gap: 20px;
+    }
+  }
 }
