--- a/src/app/components/navbar/index.component.html
+++ b/src/app/components/navbar/index.component.html
@@ -1,15 +1,15 @@
 <header [class]="{'shadow': isShowShadow}">
   <nav class="container">
-    <a href="#" class="nav-brand">Quizz</a>
+    <a [routerLink]="['/']" class="nav-brand">Quizz</a>
     <ul [class]="{ 'nav-menu': true, 'show': isDrawerOpen }">
       <li><a [routerLink]="['/']" class="nav-link" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">Home</a></li>
       <li><a [routerLink]="['/feature']" class="nav-link" routerLinkActive="active">Features</a></li>
       <li><a [routerLink]="['/about-us']" class="nav-link" routerLinkActive="active">About Us</a></li>
       <li><a [routerLink]="['/contact-us']" class="nav-link" routerLinkActive="active">Contact Us</a></li>
-      <button class="btn-signin" mat-stroked-button>Sign In</button>
+      <button class="btn-signin" [routerLink]="['/login']" [queryParams]="{redirectUrl: currentRoute}" mat-stroked-button>Sign In</button>
     </ul>
-    <button class="btn-signin" mat-stroked-button matTooltip="Sign In to Quizz">Sign In</button>
-    <button class="btn-action" (click)="onOpenDrawerHandler()">
+    <button class="btn-signin" [routerLink]="['/login']" [queryParams]="{redirectUrl: currentRoute}" mat-stroked-button matTooltip="Sign In to Quizz">Sign In</button>
+    <button class="btn-action btn" (click)="onOpenDrawerHandler()">
       <mat-icon aria-label="navigation-action" fontIcon="menu"></mat-icon>
     </button>
   </nav>
