--- a/src/app/components/testimonial/index.component.html
+++ b/src/app/components/testimonial/index.component.html
@@ -1,4 +1,13 @@
 <section class="testimonial-section">
+  <div class="testimonial-section__wave-top">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+      <path
+        fill="#8b5dff"
+        fill-opacity="1"
+        d="M0,192L30,202.7C60,213,120,235,180,234.7C240,235,300,213,360,197.3C420,181,480,171,540,186.7C600,203,660,245,720,256C780,267,840,245,900,224C960,203,1020,181,1080,192C1140,203,1200,245,1260,245.3C1320,245,1380,203,1410,181.3L1440,160L1440,320L1410,320C1380,320,1320,320,1260,320C1200,320,1140,320,1080,320C1020,320,960,320,900,320C840,320,780,320,720,320C660,320,600,320,540,320C480,320,420,320,360,320C300,320,240,320,180,320C120,320,60,320,30,320L0,320Z"
+      ></path>
+    </svg>
+  </div>
   <div class="container">
     <div>
       <p class="subtitle font-cursive">What's user says?</p>
@@ -8,34 +17,51 @@
       </h2>
     </div>
     <div class="wrapper">
-        <mat-card class="card" appearance="outlined">
-           <div class="left">
-                <div class="img">
-                    <img [ngSrc]="'/images/potrait/' + testimoni().photo" [alt]="testimoni().name" fill priority>
-                </div>
-           </div>
-           <div class="right">
-                <h3 class="testimoni-name">
-                    {{testimoni().name}}
-                </h3>
-                <p class="testimoni-job">
-                    {{testimoni().job}}
-                </p>
-                <p class="testimoni-description">
-                    {{testimoni().description}}
-                </p>
-                <div class="testimoni-rating">
-                    @for (item of testimoni().rating; track item) {
-                        <mat-icon fontIcon="star" class="yellow"/>
-                    }
-                </div>
-           </div>
-        </mat-card>
-        <div class="wrapper-indicator">
-            @for(item of testimoniLength; track item;) {
-                <button [class]="{'indicator': true, 'active': activeTestimoni() == item}" (click)="onChangeActiveTestimoni(item)"></button>
-            }
+      <mat-card class="card" appearance="outlined">
+        <div class="left">
+          <div class="img">
+            <img
+              [ngSrc]="'/images/potrait/' + testimoni().photo"
+              [alt]="testimoni().name"
+              fill
+              priority
+            />
+          </div>
         </div>
+        <div class="right">
+          <h3 class="testimoni-name">
+            {{ testimoni().name }}
+          </h3>
+          <p class="testimoni-job">
+            {{ testimoni().job }}
+          </p>
+          <p class="testimoni-description">
+            {{ testimoni().description }}
+          </p>
+          <div class="testimoni-rating">
+            @for (item of testimoni().rating; track item) {
+            <mat-icon fontIcon="star" class="yellow" />
+            }
+          </div>
+        </div>
+      </mat-card>
+      <div class="wrapper-indicator">
+        @for(item of testimoniLength; track item;) {
+        <button
+          [class]="{ indicator: true, active: activeTestimoni() == item }"
+          (click)="onChangeActiveTestimoni(item)"
+        ></button>
+        }
+      </div>
     </div>
+  </div>
+  <div class="testimonial-section__wave-bottom">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+      <path
+        fill="#8b5dff"
+        fill-opacity="1"
+        d="M0,224L30,208C60,192,120,160,180,160C240,160,300,192,360,202.7C420,213,480,203,540,170.7C600,139,660,85,720,96C780,107,840,181,900,213.3C960,245,1020,235,1080,208C1140,181,1200,139,1260,128C1320,117,1380,139,1410,149.3L1440,160L1440,0L1410,0C1380,0,1320,0,1260,0C1200,0,1140,0,1080,0C1020,0,960,0,900,0C840,0,780,0,720,0C660,0,600,0,540,0C480,0,420,0,360,0C300,0,240,0,180,0C120,0,60,0,30,0L0,0Z"
+      ></path>
+    </svg>
   </div>
 </section>
