--- a/src/app/components/auth/register/index.component.scss
+++ b/src/app/components/auth/register/index.component.scss
@@ -36,6 +36,7 @@
     &__title {
       font-size: 4.5rem;
       line-height: 5rem;
+      margin-bottom: 10px;
     }
 
     &__subtitle {
@@ -97,6 +98,10 @@
       box-shadow: none;
       border: none;
       padding: 30px;
+
+      &__title {
+        font-size: 4.2rem;
+      }
     }
   }
 }
