--- a/src/app/components/auth/register/index.component.scss
+++ b/src/app/components/auth/register/index.component.scss
@@ -2,12 +2,12 @@
 
 .login-main {
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   display: grid;
-  overflow: hidden;
   background-color: $gray-white;
   box-shadow: inset 0 -200px 1px $dark-purple;
   position: relative;
+  padding: 30px 0;
 
   &__wave-bottom {
     position: absolute;
@@ -98,6 +98,7 @@
       box-shadow: none;
       border: none;
       padding: 30px;
+      background-color: transparent;
 
       &__title {
         font-size: 4.2rem;
