--- a/src/styles.scss
+++ b/src/styles.scss
@@ -46,6 +46,21 @@ $max-width-mobile: 500px;
     selected-hover-icon-color: $dark-purple,
     selected-focus-state-layer-color: $dark-purple
   ));
+
+  @include mat.snack-bar-overrides((
+    container-color: #f2edff,
+    supporting-text-color: $dark-purple,
+    button-color: $dark-purple,
+    supporting-text-font: 'Nunito'
+  ));
+
+  @include mat.menu-overrides((
+    container-color: $gray-white,
+    item-hover-state-layer-color: rgba($purple, .3),
+    item-icon-color: $black,
+    item-label-text-font: 'Nunito',
+    item-label-text-size: .8rem,
+  ))
 }
 
 *,
@@ -90,8 +105,21 @@ body {
   padding: 22px 24px;
 }
 
+.animate-pulse {
+  animation: pulse .8s linear infinite;
+}
+
 @media screen and (max-width: $max-width-tablet) {
   .container {
     padding: 0 30px;
+  }
+}
+
+@keyframes pulse {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 50%;
   }
 }
