--- a/src/app/components/404/index.component.html
+++ b/src/app/components/404/index.component.html
@@ -1,6 +1,6 @@
 <section class="notfound-wrapper">
-    <img ngSrc="/images/404.svg" alt="notfound-404" height="300" width="300">
-    <button [routerLink]="['/']" mat-flat-button>
+    <img ngSrc="/images/404.svg" alt="notfound-404" height="300" width="300" priority>
+    <button [routerLink]="['/']" mat-flat-button class="btn-back">
         <mat-icon fontIcon="arrow_back"/>
         Back to Home
     </button>
