[feat]: add page for manage user and reusable component title of page

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -105,6 +105,12 @@ body {
   padding: 22px 24px;
 }
 
+.btn-admin {
+  font-size: .9rem;
+  padding: 20px 22px;
+  border-radius: 12px;
+}
+
 .animate-pulse {
   animation: pulse .8s linear infinite;
 }
