[feat]: add modal for at user page

--- a/src/app/pages/backend/user/index.component.html
+++ b/src/app/pages/backend/user/index.component.html
@@ -1,1 +1,4 @@
-<title-backend-app [data]="dataTitle"/>
+<title-backend-app [data]="dataTitle">
+    <dialog-user-app mode="new"/>
+</title-backend-app>
+<table-backend-app [data]="data" [columns]="columns"/>
