--- a/src/app/components/backend/title/index.component.html
+++ b/src/app/components/backend/title/index.component.html
@@ -3,8 +3,5 @@
         <h3 class="title-wrapper__title">{{data.title}}</h3>
         <p class="title-wrapper__subtitle">{{data.subtitle}}</p>
     </div>
-    <button mat-flat-button class="btn-admin">
-        <mat-icon fontIcon="add"/>
-        Add
-    </button>
+    <ng-content />
 </div>
