--- a/src/app/layouts/backend/index.component.html
+++ b/src/app/layouts/backend/index.component.html
@@ -14,6 +14,7 @@
         class="btn btn-menu-item"
         [routerLink]="['/admin' + menuItem.link]"
         routerLinkActive="active"
+        (click)="drawer.close()"
       >
         <mat-icon fontIcon="{{ menuItem.icon }}" />
         {{ menuItem.label }}
