[refactor]: move file component from page forlder to components folder

--- a/src/app/components/backend/user/dialog/form/index.component.html
+++ b/src/app/components/backend/user/dialog/form/index.component.html
@@ -1,4 +1,4 @@
-<h2 mat-dialog-title>Dialog {{data.mode}}</h2>
+<h2 mat-dialog-title>Dialog</h2>
 <mat-dialog-content>
        hello {{data.name}}
 </mat-dialog-content>
