--- a/src/app/components/backend/table/index.component.html
+++ b/src/app/components/backend/table/index.component.html
@@ -1,34 +1,61 @@
 <mat-form-field class="form-field-filter" appearance="outline">
   <mat-label>Search here</mat-label>
-  <input matInput (keyup)="applyFilter($event)" placeholder="Type anything here." #input />
+  <input
+    matInput
+    (keyup)="applyFilter($event)"
+    placeholder="Type anything here."
+    #input
+  />
 </mat-form-field>
 
 <div class="mat-elevation-z8">
-  <table mat-table [dataSource]="dataSource" matSort>
-    <!--  -->
-    @for (column of columns; track column) {
+  <div class="table-wrapper">
+    <table mat-table [dataSource]="dataSource" matSort>
+      @for (column of columns; track column) {
       <ng-container [matColumnDef]="column.columnDef">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>{{column.header}}</th>
-        @if(!column.isImage) {
-          <td mat-cell *matCellDef="let row">{{ column.cell(row) }}</td>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>
+          {{ column.header }}
+        </th>
+        @if(isAction && column.columnDef === 'action') {
+        <td mat-cell *matCellDef="let row">
+          <div class="btn-action">
+            <button type="button" mat-flat-button class="btn-action__edit" (click)="onEditHandler(row)">
+              <mat-icon fontIcon="edit" />
+              Edit
+            </button>
+            <button type="button" mat-stroked-button class="btn-action__delete" (click)="onDeleteHandler(row)">
+              <mat-icon fontIcon="delete" />
+              Delete
+            </button>
+          </div>
+        </td>
+        } @else if (column.isImage) {
+        <td mat-cell *matCellDef="let row">
+          <img
+            [ngSrc]="column.cell(row)[0]"
+            [alt]="row.name"
+            [width]="column.cell(row)[1]"
+            [height]="column.cell(row)[2]"
+            priority
+          />
+        </td>
         } @else {
-          <td mat-cell *matCellDef="let row">
-            <img [ngSrc]="row.picture" [alt]="row.name" [width]="column.cell(row)[1]" [height]="column.cell(row)[2]" priority/>
-          </td>
+        <td mat-cell *matCellDef="let row">{{ column.cell(row) }}</td>
         }
       </ng-container>
-    }
+      }
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
 
-    <!-- Row shown when there is no matching data. -->
-    <tr class="mat-row" *matNoDataRow>
-      <td class="mat-cell" colspan="4">
-        No data matching the filter "{{ input.value }}"
-      </td>
-    </tr>
-  </table>
+      <!-- Row shown when there is no matching data. -->
+      <tr class="mat-row" *matNoDataRow>
+        <td class="mat-cell not-found-data" [colSpan]="columns.length">
+          No data matching the filter "{{ input.value }}"
+        </td>
+      </tr>
+    </table>
+  </div>
 
   <mat-paginator
     [pageSizeOptions]="[5, 10, 25, 100]"
