[feat]: add loading skeleton when component first initialization

--- a/src/app/pages/backend/user/index.component.html
+++ b/src/app/pages/backend/user/index.component.html
@@ -1,4 +1,8 @@
 <title-backend-app [data]="dataTitle">
     <dialog-user-app />
 </title-backend-app>
-<table-backend-app [data]="data" [columns]="columns" [isAction]="isAction" (eventEdit)="onEditHandler($event)" (eventDelete)="onDeleteHandler($event)"/>
+@if (isLoading) {
+    <skeleton-app size="full"/>
+} @else {
+    <table-backend-app [data]="data" [columns]="columns" [isAction]="isAction" (eventEdit)="onEditHandler($event)" (eventDelete)="onDeleteHandler($event)"/>
+}
