--- a/src/app/components/backend/user/dialog/dialogConfirm/index.component.html
+++ b/src/app/components/backend/user/dialog/dialogConfirm/index.component.html
@@ -1,8 +1,8 @@
 <div class="dialog">
-  <h2 mat-dialog-title>Confirm delete data</h2>
+  <h2 mat-dialog-title>Are you sure to delete this data?</h2>
   <mat-dialog-content>
     <p class="dialog-content">
-        Are you sure delete this data? data can't be repair.
+        If you delete this data you can't recover it.
     </p>
   </mat-dialog-content>
   <mat-dialog-actions>
